# indigent-defense-scraper

./: .gitignore  README.md  pyproject.toml
scrapers/: hays.py
tests/: test_hays.py
tests/cassettes/test_hays/: test_search_calendar.yaml
